package com.ITing.JobPortal.admin.entity;

public class ReportAccount {
}
