package com.ITing.JobPortal.job.entity;

public class CompanyUploadJob {
}
