package com.iting.jobportal.job.entity;

public class JobReviewHistory {
}
