package com.ITing.JobPortal.messaging.entity;

public class Message {
}
